@@ -1,5 +1,6 @@
 <b>Version 2.2.2:</b><br/><br/>
-    &#8226; Image rotation fixes<br/>
+    &#8226; Image rotation fixes when tweeting<br/>
+    &#8226; Rotate the screen in the photo viewer<br/>
     &#8226; Notification fixes<br/>
 </br><br/>
 
